syntax = "proto3";
package chatty.chat;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "chatty/chat/params.proto";

option go_package = "chatty/x/chat/types";

// GenesisState defines the chat module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];

  repeated PubKey pubKeys = 2;

  // conversations defines all the conversations of the module.
  repeated Conversation conversations = 3;

  repeated GroupConversation groupConversations = 4;

  repeated AddressGroups addressGroups = 5;
}

message PubKey {
  string address = 1;
  string key = 2;
}

message Conversation {
  string chatter_a = 1;
  string chatter_b = 2;
  repeated ChatMessage messages = 3;
  int64 created_at = 4;
  int64 last_message_at = 5;
}

message ChatMessage {
  string sender = 1;
  string message = 2;
  bool encrypted = 3;
  int64 created_at = 4;
}

message GroupConversation {
  int64 id = 1;
  string admin = 2;
  string name = 3;
  repeated string participants = 4;
  repeated ChatMessage messages = 5;
  int64 created_at = 6;
  int64 last_message_at = 7;
  PubKey pubKey = 8;
}

message AddressGroups {
  string address = 1;
  repeated int64 groupIds = 2;
}
